--- a/Board/src/main/resources/application.properties
+++ b/Board/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.driverClassName=org.h2.jdbc.Driver 
 spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3307/board?serverTimezone=Asia/Seoul&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=1234
